affectation de date de commison pendant création de la date

--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -603,6 +603,7 @@ $.fn.afficheCalendar = function(idComm, emplacement, type, divInfo, infoCalendar
                             text: 'Enregistrer dans le calendrier',
                             class: 'btn btn-success',
                             click: function() {
+     
                                 // Lors de la validation de la boite de dialogue
                                 $.ajax({
                                     data: $("#formDateComm").serialize() +
@@ -633,6 +634,79 @@ $.fn.afficheCalendar = function(idComm, emplacement, type, divInfo, infoCalendar
                                             'refetchEvents');
                                         $("#dialogComm").dialog('close').html(
                                             '');
+                                        var eventId = rez[0]['id'];
+
+                                        var calendarId = 'calendar'; 
+                                        if ($("#calendarVisite").is(":visible")) { 
+                                            //pour verifier si l'element n'est pas masqué (donc visible)
+                                            calendarId = 'calendarVisite';
+                                        }
+                                        var parentElement = $("li:has(#" + calendarId + ")");
+                                        var prevElement = parentElement.prev('li.row-fluid');
+                                        var dateSelect = prevElement.attr('id');
+                                        console.log('ID de l\'élément précédent : ' + dateSelect);
+
+
+
+                                        var typeDossier = type;// on prend le type choisi (1 pour commision et 2 pour visite)  
+                                        console.log("typeDateSelect "+ type);
+                                        var dateEnd = new Date(end);
+                                        var dateStart = new Date(start);
+                                        var date = dateEnd;
+                                        if( date < dateStart){
+                                            date = dateStart;
+                                        }
+                                        
+                                        dd = date.getDate();
+                                        mm = date.getUTCMonth() + 1;
+                                        aa = date.getUTCFullYear();
+
+                                        if (dd < 10) {
+                                            dd = '0' + dd;
+                                        }
+                                        if (mm < 10) {
+                                            mm = '0' + mm;
+                                        }
+                                        if (emplacement == 'calendrierComm') {
+                                            my_dialog("/calendrier-des-commissions/dialogcomm", "idComm=" + idComm +
+                                            "&idDateComm=" + event.id + "&do=edit");
+                                        } else if (emplacement == 'dossier') {
+                                            if (typeDossier == 1) {
+                                                if (dateSelect == "DATEVISITE") {
+                                                    //console.log("voila la date de visite de type de dossier commision" + dateSelect)
+                                                    $("#DATEVISITE_INPUT").val(dd + "/" + mm + "/" + aa);
+                                                    $("#ID_AFFECTATION_DOSSIER_VISITE").val(eventId);
+                                                    $("#hideCommission").click();
+                                                 }
+                       
+                                                else if (dateSelect == "DATECOMM") {
+                                                    //console.log("voila la date de commission de type de dossier commision" + dateSelect)
+                                                    $("#DATECOMM_INPUT").val(dd + "/" + mm + "/" + aa);
+                                                    $("#ID_AFFECTATION_DOSSIER_COMMISSION").val(eventId);
+                                                    $("#hideCommission").click();
+                                                }
+                                            }else if (typeDossier == 2 || typeDossier == 3 ) {
+                                                if (dateSelect == "DATEVISITE") {
+                                                    $("#DATEVISITE_INPUT").val(dd + "/" + mm + "/" + aa);
+                                                    $("#ID_AFFECTATION_DOSSIER_VISITE").val(eventId);
+                                                    //console.log("voila la date de visite de type de dossier visite" + dateSelect)
+                                                    $("#hideVisite").click();
+                                                }
+                                                else if(dateSelect == "DATECOMM"){
+                                                    $("#DATECOMM_INPUT").val(dd + "/" + mm + "/" + aa);
+                                                    $("#ID_AFFECTATION_DOSSIER_COMMISSION").val(eventId);
+                                                    //console.log("voila la date de commisiion de type de dossier visite" + dateSelect)
+                                                    $("#hideCommission").click();
+
+                                                }
+
+
+
+                                            } 
+                                        }  
+                                        
+
+
                                     }
                                 });
                             }
@@ -659,6 +733,8 @@ $.fn.afficheCalendar = function(idComm, emplacement, type, divInfo, infoCalendar
                     //Si une seule date on la renseinge aussi dans l'input date de passage en commission
                     var dateSelect = $(this).parent().parent().parent().parent().parent().prev().attr(
                         'id');
+                       
+                
                     var dateEnd = new Date(event.end);
                     var dateStart = new Date(event.start);
                     var date = dateEnd;
@@ -679,11 +755,17 @@ $.fn.afficheCalendar = function(idComm, emplacement, type, divInfo, infoCalendar
                     }
 
                     if (dateSelect == "DATEVISITE") {
+                        //console.log("voila la date de visite de type de dossier commision" + dateSelect)
                         $("#DATEVISITE_INPUT").val(dd + "/" + mm + "/" + aa);
                         $("#ID_AFFECTATION_DOSSIER_VISITE").val(event.id);
+                       
                     } else if (dateSelect == "DATECOMM") {
+                        //console.log("voila la date de commission de type de dossier commision" + dateSelect)
                         $("#DATECOMM_INPUT").val(dd + "/" + mm + "/" + aa);
                         $("#ID_AFFECTATION_DOSSIER_COMMISSION").val(event.id);
+                       
+                       
+
                     }
                     $("#" + dateSelect).find(".hideCalendar").click();
                 } else if ($("#TYPE_DOSSIER").val() == 3 || $("#TYPE_DOSSIER").val() == 2) {
@@ -720,7 +802,7 @@ $.fn.afficheCalendar = function(idComm, emplacement, type, divInfo, infoCalendar
 
                                     $("#DATEVISITE_INPUT").val(dd + "/" + mm + "/" + aa);
                                     $("#ID_AFFECTATION_DOSSIER_VISITE").val(event.id);
-
+                                    //console.log("voila la date de visite de type de dossier visite" + dateSelect)
                                     $("#hideVisite").click();
                                 } else if (rez.length > 1) {
                                     var nbResultats = rez.length;
@@ -771,6 +853,7 @@ $.fn.afficheCalendar = function(idComm, emplacement, type, divInfo, infoCalendar
 
                         $("#DATECOMM_INPUT").val(dd + "/" + mm + "/" + aa);
                         $("#ID_AFFECTATION_DOSSIER_COMMISSION").val(event.id);
+                        //console.log("voila la date de commisiion de type de dossier visite" + dateSelect)
                         $("#hideCommission").click();
                     }
                 }
